--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -8,7 +8,7 @@
         %p.description= @pin.description
         %p
         Submitted by
-        = @pin.user.email 
+        = @pin.user.email
       .panel-footer
         .row
           .col-md-6
@@ -17,5 +17,8 @@
             = @pin.user.email
           .col-md-6
             .btn-group.pull-right
+              = link_to like_pin_path(@pin), method: :put, class: "btn btn-default" do
+                %span.glyphicon.glyphicon-heart
+                  = @pin.get_upvotes.size
               = link_to "Edit", edit_pin_path, class: "btn btn-default"
               = link_to "Delete", pin_path, method: :delete, data: {confirm: "Are you sure you want to delete the Pin?"}, class: "btn btn-default"
